# rust_programs

./: .gitignore
axum_beginner/: Cargo.toml
axum_beginner/examples/: quick_dev.rs
axum_beginner/src/: error.rs  main.rs
beep_test/: Cargo.toml
beep_test/src/: main.rs
benchmark_test/: Cargo.toml  lorem_ipsum.txt
benchmark_test/benches/: my_benchmark.rs
benchmark_test/src/: main.rs
blog_date/: Cargo.toml
blog_date/src/: main.rs
builder_patterns/: Cargo.toml
builder_patterns/src/: error.rs  main.rs  prelude.rs  task.rs  web.rs  web_2.rs  web_first.rs
clipsaver/: Cargo.toml
clipsaver/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
control_flow/src/: main_1.rs  thermometer.rs
cursive_test/: Cargo.toml
dag_one/: Cargo.toml
dag_one/src/: main.rs  (+1 more)
fininte_state_machine/: Cargo.toml
fshc/: Cargo.toml
guessing_game/: Cargo.toml
keylogger_project/: Cargo.toml
kylg/: Cargo.toml
leet_coding/: Cargo.toml
lhscan/: Cargo.toml
lynxhyp/: Cargo.toml
mutability_play/: Cargo.toml
new_post/: Cargo.toml  README.md
open_last/: Cargo.toml
ownership_play/: Cargo.toml
ps_tmux/: Cargo.toml
rmcmt/: Cargo.toml
rscmt/: Cargo.toml
rustegan/: Cargo.toml
rustegan/src/: lib.rs  main.rs
simple_code_layout/: Cargo.toml
snp/: Cargo.toml
temperature/: Cargo.toml
temperature_bak/: Cargo.toml
timer/: Cargo.toml  almost_there.rs
toduck/: Cargo.toml
toemoji/: Cargo.toml  text.txt
tui_practice/: Cargo.toml
tui_sleep/: Cargo.toml
twitter_challenges/: Cargo.toml
variables/: Cargo.toml
yyy/: Cargo.toml
(+68 files in other folders)
