[package]
name = "rustegan"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustegan"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
ulid = "1.0.0"
